# simple-obs

./: .gitignore  CMakeLists.txt  CMakePresets.json  GITHUB_SETUP.md  LICENSE  README.md  cleanup_whitespace.py
docs/: ARCHITECTURE.md  BUILD.md
include/: Logger.h  SceneImpl.h  SimpleOBS.h
src/: CMakeLists.txt  main.cpp
src/core/: AudioFrame.cpp  CMakeLists.txt  Engine.cpp  Logger.cpp  SceneImpl.cpp  SceneImpl.h  VideoFrame.cpp
src/encoders/: BaseEncoder.cpp  CMakeLists.txt  X264Encoder.cpp
src/filters/: BaseFilter.cpp  CMakeLists.txt  CropFilter.cpp  ScaleFilter.cpp
src/outputs/: BaseOutput.cpp  CMakeLists.txt  RTMPOutput.cpp
src/sources/: BaseSource.cpp  CMakeLists.txt  ColorSource.cpp  ImageSource.cpp
tests/: CMakeLists.txt
